# talk_to_pdf

./: .gitignore  README.md  pyproject.toml
app/: rag_chain.py  server.py
app/config/: __init__.py
app/schemas/: rag_schema.py
config/: __init__.py
docker/: docker-compose.yml
rag_loader/: rag_process.py
