[project]
name = "Backend_app_for_rag_loader"
version = "0.1.0"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "langchain-community==0.3.20",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.8",
    "langserve[server]>=0.3.1",
    "pgvector>=0.4.1",
    "psycopg>=3.2.9",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pypdf>=5.8.0",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
    "unstructured[all-docs]>=0.18.9",
    "uvicorn[standard]>=0.35.0",
]

[tool.poetry]
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11, <3.12"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "<2.11.7"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
